--- a/app/src/main/res/layout/detail_text.xml
+++ b/app/src/main/res/layout/detail_text.xml
@@ -2,8 +2,12 @@
 <ScrollView
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:id="@+id/scrlView"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/detailLayout"
@@ -15,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ImageView>
+
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -24,7 +29,13 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:textSize="@dimen/abc_text_size_medium_material"
         android:textStyle="normal"
+
         android:fontFamily="@string/abc_searchview_description_submit"
         android:typeface="sans"
         ></TextView>
-</LinearLayout></ScrollView>
+
+
+            /></LinearLayout>
+
+
+</ScrollView>
