MaterialDesign, cosmetic improovment

--- a/app/src/main/res/layout/detail_text.xml
+++ b/app/src/main/res/layout/detail_text.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:paddingTop="@dimen/tool_bar_top_padding"
+        android:minHeight="?attr/actionBarSize"
+
+        android:transitionName="actionBar" />
+    <ScrollView
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:id="@+id/scrlView"
@@ -29,6 +43,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:textSize="@dimen/abc_text_size_medium_material"
         android:textStyle="normal"
+        android:textColor="@color/material_blue_grey_800"
 
         android:fontFamily="@string/abc_searchview_description_submit"
         android:typeface="sans"
@@ -39,3 +54,4 @@
 
 
 </ScrollView>
+    </LinearLayout>
