--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,15 @@
     android:orientation="vertical"
 
     >
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:paddingTop="@dimen/tool_bar_top_padding"
+        android:minHeight="?attr/actionBarSize"
+        android:transitionName="actionBar" />
+
 
     <ListView
         android:layout_width="fill_parent"
