--- a/app/src/main/res/layout/favorite_element.xml
+++ b/app/src/main/res/layout/favorite_element.xml
@@ -9,19 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/favTextView"/>
-    <ImageView
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/favIvImg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:minHeight="0dp">
-    </ImageView>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/favItemTextView"
         android:layout_gravity="center_horizontal"
@@ -32,4 +19,22 @@
         android:fontFamily="@string/abc_searchview_description_submit"
         android:typeface="sans">
     </TextView>
+
+    <ImageView
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/favIvImg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:minHeight="0dp">
+    </ImageView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:textStyle="normal"
+        android:textColor="@color/material_blue_grey_800"
+        android:id="@+id/favTextView"/>
 </LinearLayout>
