--- a/app/src/main/res/layout/main_element.xml
+++ b/app/src/main/res/layout/main_element.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
-    android:divider="#b2ebf2"
+
+    android:divider="?attr/colorPrimary"
     android:orientation="vertical">
     <ImageView
         android:layout_gravity="center_horizontal"
